[gd_scene load_steps=7 format=3 uid="uid://da8htg7y88mb0"]

[ext_resource type="Texture2D" uid="uid://bdlyfw7s255qr" path="res://assets/Freighter.png" id="1_l0n40"]
[ext_resource type="Script" uid="uid://j383vk55kxtc" path="res://scenes/Freighter/Freighter.gd" id="1_r3dfe"]
[ext_resource type="PackedScene" uid="uid://n5y8h1ny4h6r" path="res://scenes/drones/MiningDrone.tscn" id="2_b801q"]
[ext_resource type="PackedScene" uid="uid://clv6xqtfgmqdp" path="res://scenes/ui/HealthBar.tscn" id="4_q6238"]
[ext_resource type="PackedScene" uid="uid://dahylcy6pufwi" path="res://scenes/ui/CargoBar.tscn" id="5_o0w3t"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r3dfe"]
radius = 197.0
height = 1394.0

[node name="Freighter" type="CharacterBody2D"]
collision_layer = 32768
collision_mask = 524296
motion_mode = 1
script = ExtResource("1_r3dfe")
max_health = 2000
acceleration = 50.0
drone_scene = ExtResource("2_b801q")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 3.1415927
texture = ExtResource("1_l0n40")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_r3dfe")

[node name="DroneSpawnPoint" type="Marker2D" parent="."]
position = Vector2(218, 173)

[node name="BarsContainer" type="Node2D" parent="."]
position = Vector2(31, -400)

[node name="HealthBar" parent="BarsContainer" instance=ExtResource("4_q6238")]

[node name="CargoBar" parent="BarsContainer" instance=ExtResource("5_o0w3t")]
offset_top = 8.0
offset_bottom = 12.0
